Toevoegen van checkdate and notIn functies samen met een beetje security(nog niet af)

--- a/config/packages/fos_user.yaml
+++ b/config/packages/fos_user.yaml
@@ -5,3 +5,6 @@ fos_user:
   from_email:
     address: "1033081@mborijnland.nl"
     sender_name: "10330081@mborijnland.nl"
+  registration:
+    form:
+      type: App\Form\RegistrationFormType
