--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -30,4 +30,13 @@ security:
         - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/admin/, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/admin, role: ROLE_ADMIN }
+        - { path: ^/user, role: ROLE_ADMIN }
+        - { path: ^/reservering, role: ROLE_USER }
+        - { path: ^/kamer/check, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/kamer, role: ROLE_ADMIN }
+        - { path: ^/soort, role: ROLE_ADMIN }
+        - { path: ^/extra, role: ROLE_ADMIN }
+        - { path: ^/organisatie, role: ROLE_ADMIN }
+        - { path: ^/functie, role: ROLE_ADMIN }
+        - { path: ^/image, role: ROLE_ADMIN }
